--- a/style.css
+++ b/style.css
@@ -819,7 +819,7 @@ h5{
     width: 50%;
     height: 50%;
     padding: 25px;
-    background-image: url('/static/images/rainbow.png');
+    background-image: url('rainbow.png');
     background-repeat: no-repeat;
     background-size: cover;
     box-shadow: 0px 15px 60px black;
